--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,65 @@
 annotated-types==0.6.0
 asgiref==3.7.2
-Django==4.2.11
+blis==0.7.11
+catalogue==2.0.10
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.4
+cryptography==42.0.5
+cymem==2.0.8
+Django==5.0.4
 djangorestframework==3.15.0
+idna==3.7
 iniconfig==2.0.0
+Jinja2==3.1.3
+joblib==1.4.0
+langcodes==3.4.0
+language_data==1.2.0
+lightgbm==4.3.0
+marisa-trie==1.1.0
+MarkupSafe==2.1.5
+murmurhash==1.0.10
+nltk==3.8.1
+numpy==1.26.4
 packaging==24.0
+pandas==2.2.2
+pdfminer==20191125
+pdfminer.six==20231228
 pillow==10.2.0
 pluggy==1.4.0
+preshed==3.0.9
 psycopg2-binary==2.9.9
+pycparser==2.22
+pycryptodome==3.20.0
 pydantic==2.6.4
 pydantic_core==2.16.3
 pytest==8.1.1
 pytest-django==4.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
+regex==2024.4.28
+requests==2.31.0
+scikit-learn==1.4.2
+scipy==1.13.0
+setuptools==69.5.1
+six==1.16.0
+smart-open==6.4.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 sqlparse==0.4.4
+srsly==2.4.8
+thinc==8.2.3
+threadpoolctl==3.5.0
+tqdm==4.66.2
+typer==0.9.4
 typing_extensions==4.9.0
+tzdata==2024.1
+urllib3==2.2.1
+wasabi==1.1.2
+weasel==0.3.4
+xgboost==2.0.3
