--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ cryptography==42.0.5
 cymem==2.0.8
 Django==4.2.11
 djangorestframework==3.15.0
+factory-boy==3.3.0
+Faker==25.0.1
 idna==3.7
 iniconfig==2.0.0
 Jinja2==3.1.3
