--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = placement_cell.settings
-
 python_files = tests.py test_*.py *_tests.py
+addopts =
+    --nomigrations
+    --cov=.
+    --cov-report=html
+    --cov-report=term
