--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,7 @@ python_files = tests.py test_*.py *_tests.py
 addopts =
     --nomigrations
     --cov=.
-    --cov-report=html
     --cov-report=term
+    -v
+    --tb=long
+    --cov-report=html
