--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.6.0
 anyio==4.3.0
 asgiref==3.7.2
 blis==0.7.11
+boto3==1.34.132
+botocore==1.34.132
 cachetools==5.3.3
 catalogue==2.0.10
 Cerberus==1.3.5
@@ -10,12 +12,14 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.16.0
+colorama==0.4.6
 confection==0.1.4
 coverage==7.5.1
 cryptography==42.0.5
 cymem==2.0.8
 defusedxml==0.8.0rc2
 Django==5.0.4
+django-storages==1.14.3
 djangorestframework==3.15.0
 factory-boy==3.3.0
 Faker==25.0.1
@@ -32,6 +36,7 @@ httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
 Jinja2==3.1.3
+jmespath==1.0.1
 joblib==1.4.0
 kolo==2.24.0
 langcodes==3.4.0
@@ -73,6 +78,7 @@ regex==2024.4.28
 requests==2.32.2
 requests-oauthlib==2.0.0
 rsa==4.9
+s3transfer==0.10.2
 scikit-learn==1.4.2
 scipy==1.13.0
 setuptools==69.5.1
